--- a/.github/workflows/php-syntax.yml
+++ b/.github/workflows/php-syntax.yml
@@ -1,14 +1,13 @@
 on: [push]
 
 jobs:
-  checks-syntax:
-  runs-on: ubuntu-latest
-  name: Check PHP Syntax
-  steps:
-  - name: Syntax Check
-    id: phplint
-    uses: overtrue/phplint@8.0
-    with:
-      path: .
-      options: --exclude=*.log
-  
+  check-syntax:
+    runs-on: ubuntu-latest
+    name: Check PHP Syntax
+    steps:
+    - name: Syntax Check with PHPlint
+      id: phplint
+      uses: overtrue/phplint@8.0
+      with:
+        path: .
+        options: --exclude=*.log
